fix notice layout issues

--- a/scss/layout/_intro.scss
+++ b/scss/layout/_intro.scss
@@ -18,6 +18,12 @@
 			text-align: center;
 		}
 
+		&.wrapper.fullscreen {
+			@include breakpoint(small) {
+				padding: 2em 0 0;
+			}
+		}
+
 		.inner {
 			@include breakpoint(small) {
 				padding-top: 0;
@@ -97,16 +103,16 @@
 	    width: 100%;
 	    padding: 1em;
 			border-bottom: 1px solid _palette(border-body);
+			text-align: left;
 			h3 {
 				margin: 0;
 				line-height: 50px;
-				float: left;
 				display: inline;
 			}
 			.button {
 				float: right;
 			}
-			@include breakpoint(medium) {
+			@include breakpoint(small) {
 				position: relative;
 			}
 		}
